assets/css/style.css
/* ... */
.biography-imagedate {
  float: left;
  text-align: center;
}

.biography-imagedate > h4 {
  margin-top: 20px;
  font-size: 25px;
}

.biography-imagedate > h2 {
  font-size: 45px;
}

.biography-info {
  text-align: left;
  margin-top: 40px;
  margin-right: 40px;
}

.biography-info > h2 {
  margin-left: 535px;
  font-family: "Mallanna", sans-serif;
  font-size: 3rem;
}

.biography-info > p {
  margin-left: 538px;
  font-size: 20px;
  line-height: 2rem;
}

.biography-info > h4 {
  margin-left: 538px;
  margin-top: 40px;
}

/* -------------------------------------------------MEDIA QUERIES */

@media only screen and (max-width: 1600px) and (min-width: 1400px) {
  #cover-text {
    float: none;
    margin: 60px auto 232px;
  }

  #emelie-image > img {
    width: 400px;
    height: 400px;
  }

  .emelie-name {
    font-size: 155%;
  }

  .black-top-border {
    border-top: 2px solid black;
  }
  .video-background {
    height: 860px;
  }

  .video-color-container {
    width: 95%;
    height: 760px;
    margin: 10px auto 0;
  }
}

/* ----------------------------------For larger to medium screens size from 768px wide, iPad */

@media screen and (max-width: 768px) and (max-width: 834px) {
  #cover-text {
    float: none;
    margin: 54px auto 36px;
  }

  #emelie-image {
    margin: 80px 0 0 40px;
  }

  .emelie-name {
    margin: 80px 40px 0 0;
  }

  .biography-background {
    height: 1250px;
  }

  .biography-imagedate {
    margin: 0 auto;
    float: none;
  }

  .biography-info {
    text-align: center;
    margin: 0 auto;
    float: none;
  }

  .biography-info > h2 {
    margin: 0 auto;
  }

  .biography-info > p {
    margin: 0 auto;
    width: 90%;
  }

  .biography-info > h4 {
    margin: 20px auto 0;
  }

  .bluetext-background {
    margin: 50px 0 0 24px;
    width: 350px;
  }

  .emelie-image2 {
    margin: 50px 24px 0 0;
  }

  .emelie-image2 > img {
    width: 350px;
  }

  .video-background {
    height: 680px;
  }

  .video-color-container {
    height: 2400px;
    width: 57%;
  }

  footer {
    height: 310px;
  }

  .black-top-border {
    border-top: 2px solid black;
    height: 310px;
  }
}

/* ................................................................max screen sizes 1024px iPad pro 12.9 */
@media screen and /*(min-width: 834px) and*/ (max-width: 1024px) {
  #cover-text {
    margin: 50px auto 0;
    float: none;
    height: 190px;
  }

  #cover-text > p {
    text-align: center;
    line-height: 190%;
  }

  .bluetext-background {
    margin: 50px 0 0 102px;
  }

  footer {
    height: 310px;
  }

  .black-top-border {
    border-top: 2px solid black;
  }

  .emelie-image2 {
    margin: 50px 102px 0 0;
  }

  .biography-background {
    height: 1800px;
  }

  .biography-imagedate {
    float: none;
  }

  .biography-imagedate > img {
    width: 700px;
    height: 900px;
  }

  .biography-info {
    float: none;
    text-align: center;
    margin: 0 auto;
  }

  .biography-info > h2 {
    margin: 0 auto;
    font-size: 3rem;
  }

  .biography-info > p {
    margin: 0 auto;
    line-height: 3rem;
    padding: 0 30px;
    font-size: 30px;
  }

  .biography-info > h4 {
    margin: 20px auto;
    font-size: 130%;
  }
}

/* ---------------------------------------------For smaller screens size 320px iPhone 5/SE */
@media only screen and (min-width: 320px) and (max-width: 414px) {
  #menu li {
    margin: 7px 0 0 10px;
  }

  #menu a {
    font-size: 14px;
  }

  #social-media a {
    font-size: 17px;
  }

  #social-media li {
    margin: 12px 14px 0 0;
  }

  #head-image {
    height: 285px;
  }

  div #logo {
    font-size: 110%;
  }

  #cover-text {
    width: 85%;
    font-size: 10px;
    height: 105px;
    margin: 10px 0 0 13px;
  }

  #me {
    overflow: hidden;
  }

  #emelie-image {
    float: none;
    margin: 0;
    text-align: center;
    margin-top: 20px;
  }

  #emelie-image > img {
    width: 250px;
    height: 200px;
  }

  #emelie-image > h4 {
    font-size: 180%;
    text-align: center;
    letter-spacing: 0;
    margin-top: -1px;
  }

  #emelie-image span {
    padding: 3px 37px;
  }

  .emelie-name {
    float: none;
    margin: 0;
    text-align: center;
    width: 100%;
  }

  .emelie-name > h3 {
    font-size: 115%;
    margin-bottom: 5px;
    margin-top: 10px;
    padding: 2px 5px;
  }

  .emelie-name > a > h4 {
    margin-top: 12px;
  }

  .emelie-name > p {
    padding: 0 18px;
  }

  .yoga-course {
    overflow: hidden;
    height: 350px;
  }

  .bluetext-background {
    width: 260px;
    margin: 0 auto 30px;
    height: 313px;
    float: none;
    padding: 0;
  }

  .bluetext-background > h3 {
    font-size: 118%;
  }

  .bluetext-background > p {
    font-size: 98%;
    padding: 0 3px;
  }

  .emelie-image2 {
    display: none;
  }

  footer {
    height: 335px;
  }

  .black-top-border {
    height: 335px;
  }

  .signup-form {
    max-width: 205px;
  }

  /* ---------------------------------------------------------videos.html 320px media query */
  .video-letters-spacing > iframe {
    width: 200px;
    height: 100px;
  }

  .video-color-container {
    max-height: 1200px;
    width: 76%;
  }

  /* --------------------------------------------------------biography.html 320px media query */
  .biography-background {
    height: 1130px;
  }

  .biography-imagedate > img {
    width: 250px;
    height: 320px;
  }

  .biography-info > h2 {
    font-size: 1.8rem;
  }

  .biography-info > p {
    font-size: 15px;
    line-height: 1.7rem;
  }
}

